labs/old-2018-lab1/testsuite/bad/bad136.cc
int main() {
  const (const int &) & foo = 1;
}
